--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,18 @@
+body {
+  background-image: url("../images/dogBackground.png");
+  background-size: cover;
+  background-color: #EBE2D1;
+  background-repeat: no-repeat;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  color: #555;
+  background-attachment: fixed; }
+
 #appTitle {
-  font-family: Arial;
   text-align: center;
   font-size: 6.5em;
-  margin-top: 230px;
+  margin-top: 100px;
   margin-bottom: 90px; }
 
 .col-md-12 {
@@ -21,5 +31,53 @@
 
 .jumbotron {
   background-color: transparent; }
+
+form {
+  margin-left: 35px;
+  margin-top: 10px; }
+
+legend {
+  border: transparent;
+  padding: 0; }
+
+legend, label {
+  font-size: 14px; }
+
+.navbar-inverse {
+  background-color: #1abc9c;
+  border-color: #16a085;
+  padding-bottom: 60px;
+  padding-top: 60px; }
+
+.navbar-inverse .navbar-brand {
+  color: floralwhite; }
+
+.navbar-brand {
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: 2px; }
+
+.navbar {
+  text-transform: uppercase;
+  margin-bottom: 0px; }
+
+.navbar-inverse .navbar-nav > li > a {
+  font-weight: bold;
+  color: floralwhite; }
+
+.navbar-inverse .navbar-nav > li > a:hover {
+  color: #222222; }
+
+a:hover {
+  outline: 0px; }
+
+a {
+  color: #1abc9c;
+  word-wrap: break-word;
+  -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+  -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+  transition: color 0.1s ease-in, background 0.1s ease-in; }
 
 /*# sourceMappingURL=main.css.map */
