Can add profile to FB

--- a/styles/main.css
+++ b/styles/main.css
@@ -80,4 +80,16 @@ a {
   -o-transition: color 0.1s ease-in, background 0.1s ease-in;
   transition: color 0.1s ease-in, background 0.1s ease-in; }
 
+.rightside {
+  float: right;
+  display: inline;
+}
+
+label {
+font-size: 1.2em;
+margin-top: 5px;
+padding : 2px;
+margin-right: 3px;
+
+}
 /*# sourceMappingURL=main.css.map */
