Dog Pack page is displaying

--- a/templates/candidates.hbs
+++ b/templates/candidates.hbs
@@ -1,12 +1,16 @@
 <div class="row">
-{{#each user}}
-	<div class="col-md-2">
-	  <h3>{{ name }}</h3>
-	  <div><img src="{{imageURL}}"></div>
-	  <div>"A {{gender}} {{breed}} age {{age}}"</div>
-{{/each}}
-</div>  
-
+	{{#each this}}
+		<div class="col-md-2">
+		{{#each this}}
+			  <h3>{{this.name}}</h3>
+			  <div><img src="{{this.img}}"></div>
+			  <div>{{this.gender}} {{this.breed}} age {{this.age}}</div>
+			  <div>{{this.bio}}</div>
+			  <button id="{{@key}} class="favorite" type="button">Dog Bone</button>
+		{{/each}}
+		</div>  
+	{{/each}}
+</div>
 
 
 
