script working needs styling and template for your favs page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,4 @@
 body {
-    background-image: url('../images/dogBackground.png');
     background-size: cover;
     background-color: #EBE2D1;
     background-repeat: no-repeat;
@@ -95,4 +94,9 @@ a {
   -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
   -o-transition: color 0.1s ease-in, background 0.1s ease-in;
   transition: color 0.1s ease-in, background 0.1s ease-in;
+}
+
+img {
+  width: 90%;
+  max-height: 250px;
 }
